--- a/path_planner_3d/config/planner_params.yaml
+++ b/path_planner_3d/config/planner_params.yaml
@@ -4,9 +4,10 @@ path_planner:
     map_frame: "UW_camera_world"
     robot_frame: "UW_camera"
 
-    # Planning parameters
-    planning_timeout: 5.0              # seconds
-    collision_check_resolution: 0.2    # meters - resolution for collision checking
+    # A* Planning parameters
+    planning_timeout: 5.0              # seconds - maximum time for planning
+    grid_resolution: 0.3               # meters - grid cell size for A* search
     robot_radius: 0.5                  # meters - safety radius around robot
     max_planning_range: 50.0           # meters - maximum distance to plan
-    use_rrt_star: true                 # Use RRT* (true) or basic RRT (false)
+    heuristic_weight: 1.0              # A* heuristic weight (1.0 = optimal A*, >1.0 = weighted A* for faster planning)
+    max_expansions: 60000              # maximum node expansions before giving up
